# format-text-bar

./: .gitignore  LICENSE  format-tmux-pane.cabal
app/: Main.hs
src/: Bar.hs  FormatTmuxPane.hs  Rule.hs  Segment.hs
src/templates/: Alignment.dhall  Bar.dhall  Condition.dhall  Rule.dhall  Segment.dhall  TmuxPaneInformation.dhall  default-bar.dhall  default-segment.dhall  rules.dhall
src/templates/command/: command.dhall  default
src/templates/enums/: Alignment.dhall  AlignmentType.dhall  BarOperation.dhall  BarOperationType.dhall  TextComparator.dhall  TextComparatorType.dhall
src/templates/index/: darkCircled.dhall  default  kanji.dhall  lightCircled.dhall
src/templates/path/: default  path.dhall
src/templates/title/: default  title.dhall
