cabal-version: 1.12

name:           format-tmux-pane
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/eliezercabrera/format-tmux-pane#readme>
homepage:       https://github.com/eliezercabrera/format-tmux-pane#readme
bug-reports:    https://github.com/eliezercabrera/format-tmux-pane/issues
author:         Eliezer Cabrera
copyright:      2018 Eliezer Cabrera
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/eliezercabrera/format-tmux-pane

library
  exposed-modules:
      FormatTmuxPane,
      Bar,
      Segment
  other-modules:
      Paths_format_tmux_pane
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      dhall
  default-language: Haskell2010

executable format-tmux-pane-exe
  main-is: Main.hs
  other-modules:
      Paths_format_tmux_pane
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , dhall
    , text
    , format-tmux-pane
  default-language: Haskell2010

test-suite format-tmux-pane-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_format_tmux_pane
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , format-tmux-pane
  default-language: Haskell2010
